--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
 									<header>
 										<span class="date">April 18, 2017</span>
 										<h2><a href="#">Power BI<br />
-										Data Cleaning & Dashboard </a></h2>
+										Project Repository </a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic15.png" alt="" /></a>
-									<p>Power BI data cleaning and visualisation project carried out on data sourced from an online survey regarding people switching careers to the field of Data. Includes several demographic, qualitative and quantitative questions. Includes a dashboard created from the data to answer the question of why do people want to switch to Data, and what fields specifically.</p>
+									<p>Power BI projects I have undertaken, and going from data sets, cleaning them and then visualising them into aesthetically pleasing, easy-to-read boards.</p>
 									<ul class="actions special">
-										<li><a href="Power BI Final Project.pbix" download class="button">Download Power BI Final Project</a></li>
+										<li><a href="https://github.com/MHXQU3/PowerBi" class="button">Download Power BI Projects</a></li>
 									</ul>
 								</article>
 								<article>
