--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 									<a href="#" class="image fit"><img src="images/pic15.png" alt="" /></a>
 									<p>Power BI projects I have undertaken, and going from data sets, cleaning them and then visualising them into aesthetically pleasing, easy-to-read boards.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/MHXQU3/PowerBi" class="button">Download Power BI Projects</a></li>
+										<li><a href="https://github.com/MHXQU3/PowerBi" class="button">Go to the Power BI Repository</a></li>
 									</ul>
 								</article>
 								<article>
