--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 							</ul>
 							<p>Driven by a commitment to excellence and a passion for continuous learning, I am poised to make significant contributions to any team or project. My comprehensive skill set in Power BI, SQL, Tableau, and Excel, combined with my diverse professional background, equips me to deliver actionable insights that drive informed decision-making.</p>
 								<ul class="actions special">
-									<li><a href="Data Analyst CV.pdf" download class="button large">Download CV</a></li>
-									<li><a href="Data Analyst Cover Letter.pdf" download class="button large">Download Cover Letter</a></li>
+									<li><a href="DA CV.pdf" download class="button large">Download CV</a></li>
+									<li><a href="Cover Letter.pdf" download class="button large">Download Cover Letter</a></li>
 								</ul>
 							<a class="image main"><img src="images/pic001.jpg" alt="" /></a>
 
