Added space of 20px underneath dropdown bar for better mobile legibility

--- a/elements.html
+++ b/elements.html
@@ -118,7 +118,7 @@
             <!-- Dropdown for Topics -->
             <div class="dropdown-container">
                 <label for="topicSelect">Select Topic:</label>
-                <select id="topicSelect">
+                <select id="topicSelect" style="margin-bottom: 20px;">
                     <option value="all">All</option>
                     <option value="python">Python</option>
                     <option value="sql">SQL</option>
