Trying to fix dropdown

--- a/elements.html
+++ b/elements.html
@@ -20,9 +20,9 @@
         }
 
         #topicSelect {
-            width: 200px; /* Full width */
+            width: 100%; /* Full width */
             padding: 10px; /* Padding for better appearance */
-            font-size: 16px; /* Font size */
+            font-size: 1em; /* Font size */
             border: 1px solid #ccc; /* Border style */
             border-radius: 5px; /* Rounded corners */
             -webkit-appearance: none; /* Remove default styling in WebKit browsers */
