--- a/elements.html
+++ b/elements.html
@@ -118,7 +118,7 @@
             <!-- Dropdown for Topics -->
             <div class="dropdown-container">
                 <label for="topicSelect">Select Topic:</label>
-                <select id="topicSelect" style="margin-bottom: 20px; width: 250px; padding: 5px 0; line-height: 1.2;">
+                <select id="topicSelect" style="margin-bottom: 20px;">
                     <option value="all">All</option>
                     <option value="python">Python</option>
                     <option value="sql">SQL</option>
