--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 							<li><a href="elements.html">Certifications</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/minhaz-hoque-74270a187/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/MHXQU3" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -133,17 +133,17 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">+44 7455 799</a></p>
+								<p><a href="#">+44 7455 799461</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">mi8ho7575@gmail.com</a></p>
+								<p><a href="#">mhoque2099@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/minhaz-hoque-74270a187/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/MHXQU3" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
