--- a/generic.html
+++ b/generic.html
@@ -81,17 +81,32 @@
 							<!-- Featured Post -->
 							<article class="post featured" id="bio">
 								<header class="major">
-									<span class="date">March 21, 2024</span>
 									<h1>This is my<br />
 									Portfolio Page</h1>
 									<p>This page contains all the projects I have worked on, with some details explaining what they each do.</p>
 								</header>
 							</article>
+
+								<article class="post featured">
+									<header class="major">
+										<h3 style="font-size: 2.2rem;"><a>Currently<br />Working On</a></h3>
+									</header>
+									<p id = "cwo-general" class="general-description">Here is what I am currently working on. Click the link below as the repository will be updated live.</p>
+									<select onchange="showDescription('cwo', this.value)">
+										<option value="">Select a project</option>
+										<option value="project1">Multinational Retail Data Centralisation</option>
+									</select>
+									<div id="cwo-project1" class="project-description">
+										<p>This project involves consolidating dispersed sales data into a single, centralized database using AWS services to create a unified source of truth. AWS tools will facilitate data storage and management, while Python with libraries like Pandas will be used for data manipulation and analysis. SQL will be employed to query the database and generate up-to-date business metrics. This integration streamlines data access, ensures consistency, and enhances the ability to derive actionable insights. Overall, the approach simplifies data management and improves decision-making capabilities.</p>
+									</div>
+									<ul class="actions special spacing">
+										<li><a href="https://github.com/MHXQU3/mrdc" class="button">Link to GitHub Repo</a></li>
+									</ul>
+								</article>
 							
 							<section class="posts" id="projects1">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
 										<h2><a>Python<br />Projects</a></h2>
 									</header>
 									<a class="image fit"><img src="images/python-logo1.png.jpg" alt="" /></a>
@@ -125,7 +140,6 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
 										<h2><a>SQL<br />Projects</a></h2>
 									</header>
 									<a class="image fit"><img src="images/sql-logo1.png" alt="" /></a>
@@ -147,7 +161,6 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
 										<h2><a>Power BI<br />Projects</a></h2>
 									</header>
 									<a class="image fit"><img src="images/powerbi-logo.png" alt="" /></a>
@@ -169,7 +182,6 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
 										<h2><a>Tableau<br />
 										Dashboards</a></h2>
 									</header>
@@ -188,7 +200,6 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
 										<h2><a>Excel<br />
 										Projects</a></h2>
 									</header>
@@ -283,6 +294,7 @@
 				showDescription('pbi', '');
 				showDescription('tableau', '');
 				showDescription('excel', '');
+				showDescription('cwo', '');
 			</script>
 
 	</body>
