--- a/elements.html
+++ b/elements.html
@@ -103,7 +103,6 @@
             <!-- Featured Post -->
             <article class="post featured" id="bio">
                 <header class="major">
-                    <span class="date">March 21, 2024</span>
                     <h1>This is my<br />
                         Certifications Page</h1>
                     <p>This page contains all the certificates I have earned as I was learning all the skills required to be a data analyst.<br>
@@ -129,7 +128,7 @@
             <section class="posts" id="certifications">
                 <article class="certificate" data-topic="data">
                     <header>
-                        <span class="date">April 11, 2017</span>
+                        <span class="date">Issued: July 23, 2024</span>
                         <h2><a>Data Analyst Course:<br />
                             Complete Bootcamp</a></h2>
                     </header>
@@ -141,7 +140,7 @@
                 </article>
                 <article class="certificate" data-topic="sql">
                     <header>
-                        <span class="date">April 11, 2017</span>
+                        <span class="date">Issued: May 7, 2024</span>
                         <h2><a>SQL: Complete Bootcamp<br />
                             Zero to Hero</a></h2>
                     </header>
@@ -153,7 +152,7 @@
                 </article>
                 <article class="certificate" data-topic="python">
                     <header>
-                        <span class="date">April 24, 2017</span>
+                        <span class="date">Issued: May 26, 2024</span>
                         <h2><a>Introduction<br />
                             To Python</a></h2>
                     </header>
@@ -165,7 +164,7 @@
                 </article>
                 <article class="certificate" data-topic="python">
                     <header>
-                        <span class="date">April 22, 2017</span>
+                        <span class="date">Issued: May 26, 2024</span>
                         <h2><a>Python<br />
                             Intermediate</a></h2>
                     </header>
@@ -177,7 +176,7 @@
                 </article>
                 <article class="certificate" data-topic="data">
                     <header>
-                        <span class="date">April 18, 2017</span>
+                        <span class="date">Issued: May 24, 2024</span>
                         <h2><a>Coding<br />
                             For Data</a></h2>
                     </header>
@@ -189,7 +188,7 @@
                 </article>
                 <article class="certificate" data-topic="sql">
                     <header>
-                        <span class="date">April 14, 2017</span>
+                        <span class="date">Issued: May 31, 2024</span>
                         <h2><a>SQL<br />
                             Intermediate</a></h2>
                     </header>
