--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<div id="main">
 
 						<section id="about-me">
-							<h2>About Me</h2>
+							<h1>All About Me</h1>
 							<p>With a solid academic background in Materials Science and Engineering and a diverse professional journey spanning hospitality, education, and sales, I bring a unique blend of adaptability, effective communication, and public speaking skills to data analysis. I envision a career that merges technology with business growth, positioning me as a premier candidate for a Data Analyst role.</p>
 							<p><strong>Key Skills and Experience:</strong></p>
 							<ul>
