--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<div id="intro">
 						<h1>Minhaz Hoque's<br />
 						Portfolio</h1>
-						<p>A comprehensive compilation of all my projects that I have completed in pursuit of a career in Data Analytics. Here is a link to my LinkedIn where you can learn more about me: <a href="https://www.linkedin.com/in/minhaz-hoque-74270a187/">@minhaz-hoque</a> 
+						<p>Welcome to my website. This is a portfolio that I have created to aid my potential employers and give them a thorough breakdown of my skills and achievements that I have learned/accrued en route to becoming a full fledged data analyst. Here you will find an About Me section, which gives you a brief breakdown about myself, consolidating with my CV and cover letter, both of which you can download below. You will also find A project portfolio section, which I have broken down for you into the relevant skills so you can see which project corroborates with which skill and can view them in more depth on their respective GitHub pages. Lastly, a certifications page, which is physical and tangible evidence of the skills covered in those courses. Please use the menu/buttons to navigate to the relevant pages and I do hope we have the opportunity to meet in person. Thank you and happy viewing! </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
