Update generic.html cwo section bio

--- a/generic.html
+++ b/generic.html
@@ -91,7 +91,7 @@
 									<header class="major">
 										<h3 style="font-size: 2.2rem;"><a>Currently <br />Working On</a></h3>
 									</header>
-									<p id = "cwo-general" class="general-description">Here is what I am currently working on. Click the link below as the repository will be updated live.</p>
+									<p id = "cwo-general" class="general-description">Here is what I am currently working on. Click the link below as the repository will be updated live as any changes I make are automatically pushed to GitHub.</p>
 									<select onchange="showDescription('cwo', this.value)">
 										<option value="">Select a project</option>
 										<option value="project1">Multinational Retail Data Centralisation</option>
