Update sql proj section generic.html

--- a/generic.html
+++ b/generic.html
@@ -170,14 +170,30 @@
 									<p id="sql-general" class="general-description">Here you will find a repository of all the SQL projects I have completed. Some of these display basic SQL capabilities, while others demonstrate more advanced SQL skills.</p>
 									<select onchange="showDescription('sql', this.value)">
 										<option value="">Select a project</option>
-										<option value="project1">Data Cleaning Project</option>
-										<option value="project2">Exploratory Data Analysis</option>
+										<option value="project1">Chinook Database</option>
+										<option value="project2">Coffee Shop Database</option>
+										<option value="project3">Final Project - Data Cleaning Project</option>
+										<option value="project4">Final Project - Exploratory Data Analysis</option>
+										<option value="project5">Human Resources Database</option>
+										<option value="project6">DVD Rental Database</option>
 									</select>
 									<div id="sql-project1" class="project-description">
-										<p>This SQL data cleaning project works as a preface to the subsequent project and does an early stage refining a layoffs dataset through steps such as removing duplicates, standardizing data, eliminating NULLs, and dropping unnecessary columns. A staging table is used to maintain the integrity of the raw data while transformations are applied. Key techniques include using ROW_NUMBER() for deduplication and ensuring consistent data formats. The cleaned data is stored in the layoffs_staging table, ready for further analysis. This systematic approach ensures the dataset is accurate, consistent, and optimized for querying.</p>
+										<p>This project demonstrates my proficiency in SQL through a series of queries designed to retrieve and analyze data from a music database, more specifically the Chinook database. The queries range from simple retrieval of albums, artists, and customer information to more complex aggregations, such as counting tracks in playlists, determining top-selling tracks, and calculating total revenue by country. Key operations include JOINs to associate related tables, GROUP BY for aggregating data, and filtering with WHERE clauses to focus on specific subsets. The project highlights my ability to extract actionable insights from relational databases, showcasing skills in data retrieval, transformation, and analysis.</p>
 									</div>
 									<div id="sql-project2" class="project-description">
+										<p>This project involved creating a coffee shop database and executing SQL queries to analyze employee and supplier data. Key tasks included defining database schemas, retrieving employee records, counting employees by coffeeshop, and calculating average salaries by gender. The analysis extracted distinct coffee types from suppliers and identified those providing specific varieties, such as 'Robusta.' It also investigated employee details, including hire dates, and identified unique suppliers supplying coffee to multiple locations, utilizing aggregate functions and joins to derive meaningful insights.</p>
+									</div>
+									<div id="sql-project3" class="project-description">
+										<p>This SQL data cleaning project works as a preface to the subsequent project and does an early stage refining a layoffs dataset through steps such as removing duplicates, standardizing data, eliminating NULLs, and dropping unnecessary columns. A staging table is used to maintain the integrity of the raw data while transformations are applied. Key techniques include using ROW_NUMBER() for deduplication and ensuring consistent data formats. The cleaned data is stored in the layoffs_staging table, ready for further analysis. This systematic approach ensures the dataset is accurate, consistent, and optimized for querying.</p>
+									</div>
+									<div id="sql-project4" class="project-description">
 										<p>This SQL project performs exploratory data analysis on layoffs, using the set-up from the previous project. Here, I use techniques like CTEs, aggregate functions, and window functions to explore trends in the table, revealing key insights such as the maximum layoffs of 12,000, industry distribution, and geographic disparities. CTEs and functions like SUM, AVG, and ROW_NUMBER help analyze data by industry, company, and time. The project demonstrates SQL skills in data retrieval, aggregation, and transformation, providing insights into layoff trends and their implications.</p>
+									</div>
+									<div id="sql-project5" class="project-description">
+										<p>This project involved designing and implementing a PostgreSQL database from scratch to analyze sales data. It included creating tables and inserting data efficiently, showcasing strong table creation and data insertion skills. Comprehensive SQL queries were executed to extract meaningful insights, demonstrating proficiency in data analysis. The project served as a solid foundation for developing data-driven decision-making processes.</p>
+									</div>
+									<div id="sql-project6" class="project-description">
+										<p>The SQL project involved a series of queries to analyze a film rental database. Key tasks included retrieving actor and customer details, film titles, and rental information, along with calculating statistics like average rental rates and total payments by staff. Advanced queries utilized Common Table Expressions (CTEs) to summarize customer spending and film rental trends, providing comprehensive insights into inventory management and customer behavior.</p>
 									</div>
 									<ul class="actions special spacing">
 										<li><a href="https://github.com/MHXQU3/SQLProjects" class="button">Link to GitHub Repo</a></li>
