Update generic.html tableau section

--- a/generic.html
+++ b/generic.html
@@ -230,9 +230,13 @@
 									<select onchange="showDescription('tableau', this.value)">
 										<option value="">Select a project</option>
 										<option value="project1">AirBnB Dashboard</option>
+										<option value="project2">London Bike Rides</option>
 									</select>
 									<div id="tableau-project1" class="project-description">
 										<p>This tableau project focuses on Air BnB dataset from Seattle. The dataset was comprised of 3 sheets. Listings, including full descriptions and average review score, Reviews, including unique id for each reviewer and detailed comments, and Calendar, including listing id and the price and availability for that day. This project involved me taking this data and presenting it in a visually appealing format, so any potential listers can see what the best avenue for them to go down is: What zipcode should they start leasing in? What is the best week to list their properties? How does bedroom availability and price fluctuate within zipcodes, and other various questions of the like are answered.</p>
+									</div>
+									<div id="tableau-project2" class="project-description">
+										<p>This Tableau visualization is a dynamic dashboard centered around a moving average rides graph. Users can adjust the moving average duration and period, with the entire dashboard updating to reflect selected time frames and displaying the total number of bike rides during those periods. Additionally, it features a temperature vs. wind speed heatmap, showing ride counts corresponding to specific weather conditions. Tooltips provide detailed insights, revealing rides per weather forecast and time of day for both the moving average graph and the heatmap, enhancing user interactivity and data exploration.</p>
 									</div>
 									<ul class="actions special spacing">
 										<li><a href="https://public.tableau.com/app/profile/minhaz.hoque/vizzes" class="button">Link to Tableau Public</a></li>
