--- a/generic.html
+++ b/generic.html
@@ -94,13 +94,13 @@
 									<p id = "cwo-general" class="general-description">Here is what I am currently working on. Click the link below as the repository will be updated live as any changes I make are automatically pushed to GitHub.</p>
 									<select onchange="showDescription('cwo', this.value)">
 										<option value="">Select a project</option>
-										<option value="project1">Finance Exploratory Data Analysis</option>
+										<option value="project1">Sales Data Analytics Power BI Report</option>
 									</select>
 									<div id="cwo-project1" class="project-description">
-										<p>A custom Python class was designed using SQLAlchemy to extract data from an RDS database, followed by ETL and data cleaning on a financial loans dataset containing 54,000 records. The data was prepared using Pandas, which involved cleaning 40 columns, imputing missing values, removing outliers, and transforming skewed data. Additionally, 10 business questions were addressed through data exploration and visualizations.</p>
+										<p>This project focused on data visualization using Power BI. It involved importing data from multiple sources, cleaning tables appropriately, creating measures and new tables, and designing comprehensive visualizations. Additionally, SQL was utilized to query the data, providing accessible insights for clients without direct access to Power BI. This approach ensured actionable insights were effectively communicated to all stakeholders.</p>
 									</div>
 									<ul class="actions special spacing">
-										<li><a href="https://github.com/MHXQU3/Finance-EDA" class="button">Link to GitHub Repo</a></li>
+										<li><a href="https://github.com/MHXQU3/DataAnalytics-PBIX" class="button">Link to GitHub Repo</a></li>
 									</ul>
 								</article>
 							
@@ -115,6 +115,7 @@
 										<option value="">Select a project</option>
 										<option value="project1">Multinational Retail Data Centralisation</option>
 										<option value="project2">Finance Exploratory Data Analysis</option>
+										<option value="project3">Sales Data Analytics Power BI Report</option>
 									</select>
 									<div id="da-project1" class="project-description">
 										<p>This project involves consolidating dispersed sales data into a single, centralized database using AWS services to create a unified source of truth. AWS tools will facilitate data storage and management, while Python with libraries like Pandas will be used for data manipulation and analysis. SQL will be employed to query the database and generate up-to-date business metrics. This integration streamlines data access, ensures consistency, and enhances the ability to derive actionable insights. Overall, the approach simplifies data management and improves decision-making capabilities.</p>
@@ -126,6 +127,12 @@
 										<p>A custom Python class was designed using SQLAlchemy to extract data from an RDS database, followed by ETL and data cleaning on a financial loans dataset containing 54,000 records. The data was prepared using Pandas, which involved cleaning 40 columns, imputing missing values, removing outliers, and transforming skewed data. Additionally, 10 business questions were addressed through data exploration and visualizations.</p>
 										<ul class="actions special spacing">
 											<li><a href="https://github.com/MHXQU3/Finance-EDA" class="button">Link to GitHub Repo</a></li>
+										</ul>
+									</div>
+									<div id="da-project3" class="project-description">
+										<p>This project focused on data visualization using Power BI. It involved importing data from multiple sources, cleaning tables appropriately, creating measures and new tables, and designing comprehensive visualizations. Additionally, SQL was utilized to query the data, providing accessible insights for clients without direct access to Power BI. This approach ensured actionable insights were effectively communicated to all stakeholders.</p>
+										<ul class="actions special spacing">
+											<li><a href="https://github.com/MHXQU3/DataAnalytics-PBIX" class="button">Link to GitHub Repo</a></li>
 										</ul>
 									</div>
 								</article>
